27 January 2007

* Fix attachment parsing so that it works as intended.

26 January 2007

* Assigned a number to each rule and changed logging to refer to it. Also
  tweaked the -vv configuration file output.
* Changed some vasprintf to xvasprintf now that the latter exists.
* Fixed command.c to trim CR line end if present, this makes IMAP over ssh
  work. (0.9a)
* Fixed miscalculation of length in find_header. (0.9a)
* Fixed find_header to locate the first rather than second instance.
* Added FQDN and what it resolves to to the domains list by default.
* Added a basic Received header with local host and fdm version, may be disabled
  with the new set no-received option.
* Free mmap'd region before mmap'ing it again in shm_realloc, otherwise the
  actual disk space isn't freed. This affected previous versions too but 
  the mail was very rarely reallocated, now that the header is added it is.
* Changed all the descriptions to static buffers and audited use of snprintf.

$Id: CHANGES,v 1.7 2007-01-27 16:57:19 nicm Exp $