@@ -1,6 +1,14 @@
+07 February 2007
+
+* Added -D command line option.
+
+05 February 2007
+
+* Made options be printed with -v. 
+
 27 January 2007
 
-* Fix attachment parsing so that it works as intended.
+* Fixed attachment parsing so that it works as intended.
 
 26 January 2007
 
@@ -19,4 +27,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.7 2007-01-27 16:57:19 nicm Exp $
+$Id: CHANGES,v 1.8 2007-02-07 14:52:19 nicm Exp $
